--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
 .darkCard{
+    font-family: 'product';
     background: #202a3b!important;
     color: white!important;
 }
 .darkBack{
+    font-family: 'product';
     background: #17202e!important;
     color: white!important;
 }
@@ -10,6 +12,7 @@
     color: #8091ab;
 }
 .card-title{
+    font-family: 'product';
     margin-bottom:  0px !important;
     padding-top: 1em!important;
     padding-left: 2em!important;
@@ -26,4 +29,12 @@
 }
 .compPosition{
     position: absolute;
+}
+@font-face {
+    font-family: 'product';
+    src: url('../src/fonts/product.ttf');
+}
+
+.header{
+    box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 1px 3px 0px rgba(0,0,0,0.12);
 }
